[package]
authors = ["Madao"]
categories = ["wasm"]
description = "Use WASM to do sudoku"
license = "Apache-2.0/MIT"
name = "wasm-sudoku"
readme = "./README.md"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.25"

[dependencies.web-sys]
version = "0.3"
features = []
